Clean up extant errors in glossary and vision docs; rename legacy prototype references to templates
